--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@types/three": "^0.164.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "geist": "^1.3.0",
     "lucide-react": "^0.378.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
