--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@types/three": "^0.164.0",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
